--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -13,7 +13,7 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
           <div class="modal-body">
-            <h2>{{ post.title }}</h2>
+            <h2>{{ post.title_project }}</h2>
             <hr class="star-primary">
             <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
             {% if post.description %}
@@ -33,6 +33,11 @@
               {% if post.category %}
               <li>Service:
                 <strong>{{ post.category }}</strong>
+              </li>
+              {% endif %}
+              {% if post.technology %}
+              <li>Technology:
+                <strong>{{ post.technology }}</strong>
               </li>
               {% endif %}
             </ul>
