--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,24 +3,20 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>About</h2>
+        <h2>Über mich</h2>
         <hr class="star-light">
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
-          source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
-          customization.</p>
+        <p>Ich bin ein Freiberuflicher Software Ingenieur, mit Fokus auf Software-Entwicklung, Requirement Engineering und Management.
+          Am meisten Erfahrung konnte ich bis jetzt in der Luft und Raumfahrtbranche sammeln, sowohl im Zivilen und Militärischen Bereich.
+          Desweiteren hatte ich noch viele nennenswerte Projekte in der Automobil-, der Medizintechnik- und der Vermessungsbranche. </p>
       </div>
       <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
-          a graphic artist looking to share your projects, this template is the perfect starting point! </p>
-      </div>
-      <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Download Theme
-        </a>
+        <p>In der Software-Entwicklung liegen meine Stärken bei C++, Java, Qt und diversen Frameworks. Ich arbeite sowohl einzeln als auch in verteilten Multinationalen Teams produktiv
+         und bringe meine Erfahrung gerne in ein Team ein. Durch meine Erfahrung in Leitungspositionen kann ich gut als Vermittler zwischen zwei Welten agieren. 
+         Beim Requirement Engineering hilft meine Erfahrung aus beiden Perspektiven bei der Erstellung von effizienten und guten Anforderungen. </p>
       </div>
     </div>
   </div>
