added english transition entries

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,20 +3,16 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>Über mich</h2>
+        <h2>{{ site.about }}</h2>
         <hr class="star-light">
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Ich bin ein Freiberuflicher Software Ingenieur, mit Fokus auf Software-Entwicklung, Requirement Engineering und Management.
-          Am meisten Erfahrung konnte ich bis jetzt in der Luft und Raumfahrtbranche sammeln, sowohl im Zivilen und Militärischen Bereich.
-          Desweiteren hatte ich noch viele nennenswerte Projekte in der Automobil-, der Medizintechnik- und der Vermessungsbranche. </p>
+        <p>{{ site.about_me1 }}</p>
       </div>
       <div class="col-lg-4">
-        <p>In der Software-Entwicklung liegen meine Stärken bei C++, Java, Qt und diversen Frameworks. Ich arbeite sowohl einzeln als auch in verteilten Multinationalen Teams produktiv
-         und bringe meine Erfahrung gerne in ein Team ein. Durch meine Erfahrung in Leitungspositionen kann ich gut als Vermittler zwischen zwei Welten agieren. 
-         Beim Requirement Engineering hilft meine Erfahrung aus beiden Perspektiven bei der Erstellung von effizienten und guten Anforderungen. </p>
+        <p>{{ site.about_me2 }}</p>
       </div>
     </div>
   </div>
