--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,10 +22,10 @@
           <a href="#portfolio">Portfolio</a>
         </li>
         <li class="page-scroll">
-          <a href="#about">Über mich</a>
+          <a href="#about">{{ site.about }}</a>
         </li>
         <li class="page-scroll">
-          <a href="#contact">Kontact</a>
+          <a href="#contact">{{ site.contact }}</a>
         </li>
       </ul>
     </div>
