--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -20,7 +20,7 @@
           </div>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="email">Email Adresse/Address</label>
+              <label for="email">{{ site.email_address }}</label>
               <input type="email" name="_replyto" class="form-control" placeholder="Email Adresse/Address" id="email" required
                 data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
@@ -32,7 +32,7 @@
           </div>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="message">Nachricht/Message</label>
+              <label for="message">{{ site.email_message }}</label>
               <textarea rows="5" name="message" class="form-control" placeholder="Nachricht/Message" id="message" required
                 data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
@@ -42,7 +42,7 @@
           <div id="success"></div>
           <div class="row">
             <div class="form-group col-xs-12">
-              <button type="submit" class="btn btn-success btn-lg">Senden/Send</button>
+              <button type="submit" class="btn btn-success btn-lg">{{ site.email_send }}</button>
             </div>
           </div>
         </form>
