--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
           <a href="#about">{{ site.about }}</a>
         </li>
         <li class="page-scroll">
-          <a href="#contact">{{ site.contact }}</a>
+          <a href="#contact">{{ site.contact_title }}</a>
         </li>
       </ul>
     </div>
